--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,7 @@ env.bak/
 venv.bak/
 
 # Visual Studio Code #
-.vscode/*
+.vscode/
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
