--- a/.gitignore
+++ b/.gitignore
@@ -22,11 +22,11 @@ env.bak/
 venv.bak/
 
 # Visual Studio Code #
-.vscode/
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
+/.vscode/*
+!/.vscode/settings.json
+!/.vscode/tasks.json
+!/.vscode/launch.json
+!/.vscode/extensions.json
 .history
 
 # mac
