--- a/frontend/.vscode/extensions.json
+++ b/frontend/.vscode/extensions.json
@@ -2,6 +2,8 @@
   "recommendations": [
     "dbaeumer.vscode-eslint",
     "esbenp.prettier-vscode",
-    "jpoissonnier.vscode-styled-components"
+    "jpoissonnier.vscode-styled-components",
+    "mgmcdermott.vscode-language-babel",
+    "stylelint.vscode-stylelint"
   ]
 }
